# CANnuccia

./: .gitignore  CMakeLists.txt  README.md
docs/: CANnuccia.xlsx
src/: CMakeLists.txt
src/avr/: AVRtoolchain.cmake  CMakeLists.txt  can.c  debug.c  flash.c  timer.c  util.c
src/common/: can.h  can_msgs.h  cc.h  debug.h  flash.h  isr.c  isr.h  main.c  timer.h  util.h
src/stm32/: .gdbinit  CMakeLists.txt  STM32toolchain.cmake  can.c  debug.c  flash.c  startup.c  timer.c  util.c
src/stm32/ld/: stm32f103c8.ld
